Refactor pki scripts. Refs #1956

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+==== CA environment ====
+
 Prepare CA environment:
 
 mkdir /etc/openvpn/certs
@@ -7,24 +9,37 @@ echo 01 > /etc/openvpn/certs/serial
 echo 01 > /etc/openvpn/certs/crlnumber
 openssl dhparam -out /etc/openvpn/certs/dh1024.pem 1024
 
+
+==== Certificate creation ====
+
 Create a valid certificate:
 1. Create a CA (we already have it in NSRV.crt)
 2. Create a certificate signing request: this will create a csr file and a key file
-   Eg:
-       openssl req -batch -new  -nodes -keyout "/root/test.key" -out "/root/test.csr" -config /etc/openvpn/certs/openssl-openvpn.cnf
 3. Sign the csr file
-   Eg:
-       openssl x509 -req -days 365 -in /root/test.csr -signkey /etc/pki/tls/private/NSRV.key -out /root/test.crt
+
+Esecute:
+/usr/libexec/nethserver/pki-vpn-gencert <commonName>
+
+
+==== Certificate revocation ====
+
+1. Revoke and save to CRL
+
+Execute:
+/usr/libexec/nethserver/pki-vpn-revoke [-d] <commonName>
+
+If '-d' option is enabled, also delete crt, csr, pem and key files
 
 
 
+==== Usefull commands ====
 
 Read crt informations:
 openssl x509 -text -in /root/test.crt
 
 
 Create a pcks12:
-    openssl pkcs12  -export -in pippo2.crt -inkey pippo2.key -certfile /etc/pki/tls/certs/NSRV.crt  -name "mypippo2" -out pippo2.p12
+    openssl pkcs12  -export -in test.crt -inkey test.key -certfile /etc/pki/tls/certs/NSRV.crt  -name "test" -out test.p12
 
 Revoke a certificate:
 /usr/bin/openssl ca -revoke  /etc/openvpn/certs/pippo2.crt  -config /etc/openvpn/certs/ca.cnf
